--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ click==8.1.6
 colorama==0.4.6
 Flask==2.3.2
 Flask-Bcrypt==1.0.1
+Flask-Login==0.6.2
 Flask-SQLAlchemy==3.0.5
 Flask-WTF==1.1.1
 greenlet==2.0.2
@@ -14,6 +15,7 @@ importlib-metadata==6.8.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
+python-dotenv==1.0.0
 requests==2.31.0
 SQLAlchemy==2.0.19
 typing_extensions==4.7.1
